# Producto-datos-lab

./: 00_nyc_taxi_model.ipynb  CHECKLIST_ENTREGABLES.md  EVALUACION_TEMPORAL_ESTRATEGIA.md  LICENSE  MODULAR_README.md  README.md  RESUMEN_FINAL_ENTREGABLES.md  pyproject.toml
examples/: complete_pipeline_example.py
notebook/: temporal_evaluation.ipynb
scripts/: evaluate_model.py  temporal_evaluation_script.py  train_simple.py
src/taxi_tips_classifier/: __init__.py  data.py  features.py  model.py  plots.py  predict.py  temporal_evaluation.py  train.py
temporal_analysis_results/: reporte_completo.joblib  resultados_temporales.csv
